--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -197,7 +197,8 @@ tasks:
         wait
       - |
         TMP="$(mktemp)"
-        jq -s '.[0] * .[1]' "package.json" tmp.package.json > "$TMP"
+        BLUEPRINT="$(jq -r '.blueprint' package.json)"
+        jq --arg blueprint "$BLUEPRINT" -s '.[0] * .[1] | .blueprint = (.blueprint * ($blueprint | fromjson))' "package.json" tmp.package.json > "$TMP"
         mv "$TMP" package.json
       - rm tmp.package.json
 
@@ -222,4 +223,4 @@ tasks:
     cmds:
       - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
         --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
-        -S '. = (. * ($blueprint | fromjson))' ./{{.COMMON_FOLDER}}/.config/docs/variables.json > ./.variables.json
+        -S '. = (. * ($blueprint | fromjson)) | .version = $version' ./{{.COMMON_FOLDER}}/.config/docs/variables.json > ./.variables.json
