--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -182,6 +182,7 @@ tasks:
 
   template:files:hbs:
     deps:
+      - :install:local:modules
       - :install:npm:hbs
     cmds:
       - if [ -f "package.hbs.json" ]; then mv package.hbs.json tmp.package.hbs.json; fi
@@ -204,6 +205,7 @@ tasks:
 
   template:files:handlebars:
     deps:
+      - :install:local:modules
       - :install:npm:hbs
     cmds:
       - |
