--- a/common/.config/taskfiles/Taskfile-install.yml
+++ b/common/.config/taskfiles/Taskfile-install.yml
@@ -17,7 +17,7 @@ tasks:
       - npm:{{.NPM_PROGRAM}}
     cmds:
       - '{{.NPM_PROGRAM}} install --force'
-      - cmd: '{{.NPM_PROGRAM}} audit fix{{if eq .NPM_PROGRAM "npm"}} --force{{end}} || true'
+      - cmd: '{{.NPM_PROGRAM}} audit fix || true'
         ignore_error: true
     sources:
       - package.json
