Update common/.config/taskfiles/upstream/Taskfile-common.yml, common/.config/taskfiles/upstream/Taskfile-project.yml, common/.config/taskfiles/npm/Taskfile-cov.yml, common/.config/taskfiles/npm/Taskfile-doc.yml, common/.config/taskfiles/npm/Taskfile.yml, common/.config/taskfiles/nest/Taskfile.yml, common/.config/taskfiles/lint/Taskfile-esprint.yml, common/.config/taskfiles/lint/Taskfile-markdown.yml, common/.config/taskfiles/lint/Taskfile-prose.yml, common/.config/taskfiles/lint/Taskfile.yml, common/.config/taskfiles/common/Taskfile-code.yml, common/.config/taskfiles/common/Taskfile-update.yml, common/.config/taskfiles/common/Taskfile.yml, common/.config/taskfiles/ansible/Taskfile-ansibler.yml, common/.config/taskfiles/ansible/Taskfile.yml, common/.config/taskfiles/Taskfile-docker.yml, common/.config/taskfiles/Taskfile-fix.yml, common/.config/taskfiles/Taskfile-image.yml, common/.config/taskfiles/Taskfile-install.yml, common/.config/taskfiles/Taskfile-security.yml, common/.config/taskfiles/Taskfile-vscode.yml, common/.config/fastlane/Appfile, common/Taskfile.yml.handlebars, Taskfile.yml, common/.gitlab/ci/update/shared.gitlab-ci.yml, common/.gitlab/ci/update/common.gitlab-ci.yml, common/.gitlab/ci/update/project.gitlab-ci.yml, common/.gitlab/ci/update/docs.gitlab-ci.yml, common/.config/taskfiles/Taskfile-ci.yml, common/.config/taskfiles/upstream/Taskfile-shared.yml, common/.config/taskfiles/upstream/Taskfile.yml, common/.config/start.sh, package.json, common/.config/hbs.cjs, common/poetry.lock, common/pyproject.hbs.toml, common/.config/taskfiles/upstream/Taskfile-docs.yml

--- a/common/.config/taskfiles/Taskfile-docker.yml
+++ b/common/.config/taskfiles/Taskfile-docker.yml
@@ -44,7 +44,6 @@ tasks:
 
   build:slim:
     deps:
-      - :common:npm-prettier
       - :install:software:docker
       - :install:software:dockerslim
     desc: Build a slim version of the Docker image
@@ -93,7 +92,7 @@ tasks:
     deps:
       - :install:npm:prettier
     cmds:
-      - prettier --write slim.report.json
+      - '{{.NPM_BINARY_HANDLE}}prettier --write slim.report.json'
     sources:
       - slim.report.json
 
