--- a/common/.config/taskfiles/Taskfile-fix.yml
+++ b/common/.config/taskfiles/Taskfile-fix.yml
@@ -1,11 +1,6 @@
 ---
 version: '3'
 
-vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
-    -o -name venv
-
 tasks:
   eslint:
     deps:
@@ -25,7 +20,7 @@ tasks:
       **Example fixing all JS/TS files in a project:**
       `task fix:js`
     cmds:
-      - eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPM_BINARY_HANDLE}}eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   json:
     deps:
@@ -43,7 +38,7 @@ tasks:
       **Example looping through project:**
       `task fix:json`
     cmds:
-      - eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPM_BINARY_HANDLE}}eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   misc:
     deps:
@@ -148,7 +143,7 @@ tasks:
 
       For more information, see [Prettier's website](https://prettier.io/).
     cmds:
-      - prettier --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPM_BINARY_HANDLE}}prettier --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   python:
     deps:
@@ -235,10 +230,10 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          shellcheck -f diff {{.CLI_ARGS}} | git apply
+          {{.NPM_BINARY_HANDLE}}shellcheck -f diff {{.CLI_ARGS}} | git apply
         {{else}}
           find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) \
-            -print0 | xargs -0 shellcheck -f diff | git apply
+            -print0 | xargs -0 {{.NPM_BINARY_HANDLE}}shellcheck -f diff | git apply
         {{end}}
 
   xml:
@@ -257,7 +252,7 @@ tasks:
       **Example fixing specific `.xml` file(s):**
       `task fix:xml -- 'file_name.xml'`
     cmds:
-      - eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPM_BINARY_HANDLE}}eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   yaml:
     desc: Autofix YML files
@@ -334,4 +329,4 @@ tasks:
       **Example fixing specific `.yml` file(s):**
       `task fix:yaml:order -- 'file_name.{yml,yaml}'`
     cmds:
-      - eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPM_BINARY_HANDLE}}eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
