--- a/common/.config/taskfiles/Taskfile-image.yml
+++ b/common/.config/taskfiles/Taskfile-image.yml
@@ -2,9 +2,6 @@
 version: '3'
 
 vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
-    -o -name venv
   TINYPNG_API_KEY: z4qhFBLRvNMG9rHmdkSLx1DR1FNZN5gc
 
 tasks:
@@ -44,9 +41,9 @@ tasks:
               true log '`'"$1"'` has already been compressed by TinyPNG'
             else
               if [ -f ~/.tinypng ]; then
-                tinypng "$1"
+                {{.NPM_BINARY_HANDLE}}tinypng "$1"
               else
-                tinypng -k "{{.TINYPNG_API_KEY}}" "$1"
+                {{.NPM_BINARY_HANDLE}}tinypng -k "{{.TINYPNG_API_KEY}}" "$1"
               fi
               exiftool -comment="tinypng-compressed" "$1"
             fi
@@ -65,9 +62,9 @@ tasks:
               true log '`'"$1"'` has already been compressed by TinyPNG'
             else
               if [ -f ~/.tinypng ]; then
-                tinypng "$1"
+                {{.NPM_BINARY_HANDLE}}tinypng "$1"
               else
-                tinypng -k "{{.TINYPNG_API_KEY}}" "$1"
+                {{.NPM_BINARY_HANDLE}}tinypng -k "{{.TINYPNG_API_KEY}}" "$1"
               fi
               exiftool -comment="tinypng-compressed" "$1"
             fi
@@ -108,7 +105,7 @@ tasks:
     cmds:
       - |
         if ! exiftool "${ARGS_ARRAY[3]}" | grep "Image Size" | grep "${ARGS_ARRAY[1]}x${ARGS_ARRAY[2]}; then
-          sharp -i "${ARGS_ARRAY[3]}" -o "${ARGS_ARRAY[3]}.resized" resize "${ARGS_ARRAY[1]}" "${ARGS_ARRAY[2]}"
+          {{.NPM_BINARY_HANDLE}}sharp -i "${ARGS_ARRAY[3]}" -o "${ARGS_ARRAY[3]}.resized" resize "${ARGS_ARRAY[1]}" "${ARGS_ARRAY[2]}"
           mv "${ARGS_ARRAY[3]}.resized" "${ARGS_ARRAY[3]}"
         fi
     status:
