--- a/common/.config/taskfiles/Taskfile-security.yml
+++ b/common/.config/taskfiles/Taskfile-security.yml
@@ -110,11 +110,11 @@ tasks:
       - task: snyk:login
       - |
         {{if .CLI_ARGS}}
-          snyk test --docker {{.CLI_ARGS}}
+          {{.NPM_BINARY_HANDLE}}snyk test --docker {{.CLI_ARGS}}
         {{else}}
           for TAG in {{.TAGS}}; do
             DOCKER_IMAGE="$(jq -r '.slug' .variables.json)"
-            snyk test --docker {{.DOCKERHUB_PROFILE}}/${DOCKER_IMAGE}:${TAG} --file=Dockerfile
+            {{.NPM_BINARY_HANDLE}}snyk test --docker {{.DOCKERHUB_PROFILE}}/${DOCKER_IMAGE}:${TAG} --file=Dockerfile
           done
         {{end}}
 
@@ -123,7 +123,7 @@ tasks:
       SNYK_API_TOKEN:
         sh: snyk config get api
     cmds:
-      - snyk auth
+      - '{{.NPM_BINARY_HANDLE}}snyk auth'
     status:
       - '[ ! -z "$SNYK_API_TOKEN" ]'
 
