--- a/common/.config/taskfiles/ansible/Taskfile-ansibler.yml
+++ b/common/.config/taskfiles/ansible/Taskfile-ansibler.yml
@@ -40,7 +40,8 @@ tasks:
       - :install:npm:prettier
     cmds:
       - ansibler --populate-platforms --json-file '{{.VARIABLES_PATH}}'
-      - prettier --write '{{.META_PATH}}'
+      - >
+        {{.NPM_BINARY_HANDLE}}prettier --write '{{.META_PATH}}'
     log:
       error: 'Error populating the `{{.META_PATH}}` platforms variable with `ansibler.'
       success: 'Populated the platforms variable in `{{.META_PATH}}` using data from `{{.MOLECULE_RESULTS_PATH}}`'
