--- a/common/.config/taskfiles/lint/Taskfile-prose.yml
+++ b/common/.config/taskfiles/lint/Taskfile-prose.yml
@@ -1,11 +1,6 @@
 ---
 version: '3'
 
-vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
-    -o -name venv
-
 tasks:
   prose:
     deps:
@@ -28,9 +23,9 @@ tasks:
       - task: prose:config
       - |
         {{if .CLI_ARGS}}
-          proselint {{.CLI_ARGS}}
+          {{.NPM_BINARY_HANDLE}}proselint {{.CLI_ARGS}}
         {{else}}
-          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 proselint
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 {{.NPM_BINARY_HANDLE}}proselint
         {{end}}
       - task: prose:config:restore
 
