--- a/common/.config/taskfiles/upstream/Taskfile-docs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-docs.yml
@@ -1,5 +1,88 @@
 ---
 version: '3'
 
+vars:
+  COMMON_FILES_URL: https://gitlab.com/megabyte-labs/common/shared.git
+  COMMON_FOLDER: .common
+  SHARED_DOCS_URL: https://gitlab.com/megabyte-labs/documentation/shared.git
+  SHARED_FOLDER: .shared
+
 tasks:
-  nothing: 'true'
+  clean:
+    deps:
+      - clean:common
+      - clean:shared
+
+  clean:common: rm -rf {{.COMMON_FOLDER}}
+
+  clean:shared: rm -rf {{.SHARED_FOLDER}}
+
+  clone:
+    deps:
+      - clone:common
+      - clone:shared
+
+  clone:common:
+    deps:
+      - rm -rf {{.COMMON_FOLDER}}
+      - git clone --depth=1 {{.COMMON_FILES_URL}} {{.COMMON_FOLDER}}
+      - rm -rf {{.COMMON_FOLDER}}/.git
+
+  clone:shared:
+    cmds:
+      - rm -rf {{.SHARED_FOLDER}}
+      - git clone --depth=1 {{.SHARED_DOCS_URL}} {{.SHARED_FOLDER}}
+      - rm -rf {{.SHARED_FOLDER}}/.git
+
+  copy:
+    deps:
+      - copy:common
+      - copy:shared
+    cmds:
+      - mv {{.SHARED_FOLDER}}/docs-gitlab-ci.yml .gitlab-ci.yml
+
+  copy:common:
+    cmds:
+      - cp -rT ./{{.COMMON_FOLDER}}/common/ .
+      - task: :common:husky:permissions
+
+  copy:shared:
+    cmds:
+      - rm -rf common
+      - mv {{.SHARED_FOLDER}}/common common
+      - mv {{.SHARED_FOLDER}}/README.md README.md
+      - mv {{.SHARED_FOLDER}}/CONTRIBUTING.md CONTRIBUTING.md
+
+  merge:
+    deps:
+      - merge:variables
+      - merge:package
+
+  merge:package:
+    cmds:
+      - task: :upstream:project:merge:package:files
+
+  merge:variables:
+    deps:
+      - :install:software:jq
+    cmds:
+      - jq -s -S '.[0] * .[1]' {{.SHARED_FOLDER}}/common.json common.json > variables.json
+
+  template:
+    deps:
+      - :install:local:modules
+      - :install:npm:hbs
+    cmds:
+      - task: template:variables
+      - task: :upstream:project:template:files
+
+  template:variables:
+    deps:
+      - :install:software:jq
+    cmds:
+      - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
+        --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
+        --arg poetry "$(jq -r '.keywords | join("\", \"")' package.json | sed 's/$/"/' | sed 's/^/"/')"
+        -S '. = (. * ($blueprint | fromjson)) | .version = $version | .poetryKeywords = $poetry'
+        variables.json > ./.variables.json
+
