--- a/package.json
+++ b/package.json
@@ -49,14 +49,18 @@
     "overview": "This repository feeds downstream repositories that store programming language specific common files. When this repository is updated, the changes are propagated downstream via CI. This repository contains files that are meant to be global. For instance, if Go projects and Angular projects share a common file (say `.editorconfig`, for example) then that file is stored in this repository and propagated to the Go and Angular common file repositories. Then, for example, the Go common file repository is included in all of the Go projects as a submodule. This is meant to be done with every repository in an eco-system so that meta files, documentation, etc. are all kept in sync.",
     "name": "Shared",
     "repository": {
-      "github": "https://github.com/ProfessorManhattan/shared-common-files",
+      "github": "https://github.com/ProfessorManhattan/common-shared",
       "gitlab": "https://gitlab.com/megabyte-labs/common/shared"
     },
-    "slug": "shared-common-files",
+    "slug": "common-shared",
     "title": "Shared Common Files"
   },
   "eslintConfig": {
-    "extends": "@megabytelabs/eslint-config"
+    "extends": "@megabytelabs/eslint-config",
+    "rules": {
+      "import/no-extraneous-dependencies": "off",
+      "import/no-unresolved": "off"
+    }
   },
   "funding": [
     {
