--- a/common/.gitlab/ci/update/project.gitlab-ci.yml
+++ b/common/.gitlab/ci/update/project.gitlab-ci.yml
@@ -19,5 +19,6 @@ update:
     - task ci:before
   script:
     - task ci:submodules
+    - task upstream:project
     - task start
     - task ci:commit
